--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
               ЗАМІНІТЬ 'https://t.me/your_channel_name/101' на посилання на ваш пост
               ЗАМІНІТЬ 'Стаття про початок' на назву вашої статті
             -->
-            <a href="#" class="article-link" onclick="openPost('https://t.me/durov/215')">
+            <a href="#" class="article-link" onclick="openPost('https://t.me/fortestloyal/3')">
                 Стаття про початок
             </a>
-            <a href="#" class="article-link" onclick="openPost('https://t.me/durov/214')">
+            <a href="#" class="article-link" onclick="openPost('https://t.me/fortestloyal/4')">
                 Стаття про налаштування
             </a>
             
