--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             
             // Використовуємо метод Telegram для відкриття посилання
             // Це закриє Mini App і перекине користувача на пост
-            tg.openLink(url);
+            tg.openTelegramLink(url);
             
             // НЕОБОВ'ЯЗКОВО: Закриваємо Mini App (хоча openTelegramLink зазвичай робить це сам)
             // tg.close(); 
