--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@
             <a href="#" class="article-link" onclick="openPost('https://t.me/c/2546267701/93')">
                 Гайд по роботі з Ices у Tableau + TU avatar CTR
             </a>
-            
+            <a href="#" class="article-link" onclick="openPost('https://t.me/c/2546267701/100')">
+                Гайд по роботі із Connections with users + RU-TU interaction
+            </a>
             <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
         </div>
 
