--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <button class="menu-button" onclick="showSection('topic-6')">📚 Тема 6: Ton of voice</button>
             <button class="menu-button" onclick="showSection('topic-7')">📚 Тема 7: Retention</button>
             <button class="menu-button" onclick="showSection('topic-8')">📚 Тема 8: Tableau</button>
+            <button class="menu-button" onclick="showSection('topic-9')">📚 Тема 9: MTU</button>
         </div>
 
         <!-- Секції -->
@@ -174,6 +175,12 @@
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/89')">Гайд по роботі з TU score, TU activity, Partner’s details</a>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/93')">Гайд по роботі з Ices у Tableau + TU avatar CTR</a>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/100')">Гайд по роботі із Connections with users + RU-TU interaction</a>
+            <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
+        </div>
+
+        <div id="topic-9" class="section hidden-section">
+            <h1>📚 Тема 9: MTU</h1>
+            <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/103')">Робота із профілем MTU (Вік, Аватарка,  + Медіа)</a>
             <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
         </div>
 
