--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         <div id="topic-9" class="section hidden-section">
             <h1>📚 Тема 9: MTU</h1>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/103')">Робота із профілем MTU (Вік, Аватарка,  + Медіа)</a>
+            <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/106')">Айси MTU</a>
             <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
         </div>
 
