--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             <h1>📚 Тема 9: MTU</h1>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/103')">Робота із профілем MTU (Вік, Аватарка,  + Медіа)</a>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/106')">Айси MTU</a>
+            <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/109')">Як працювати з FRU</a>
             <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
         </div>
 
