--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <button class="menu-button" onclick="showSection('topic-7')">📚 Тема 7: Retention</button>
             <button class="menu-button" onclick="showSection('topic-8')">📚 Тема 8: Tableau</button>
             <button class="menu-button" onclick="showSection('topic-9')">📚 Тема 9: MTU</button>
+            <button class="menu-button" onclick="showSection('topic-9')">📚 Тема 10: Holiday edition: TOP-кейси роботи з функціоналом</button>
         </div>
 
         <!-- Секції -->
@@ -183,6 +184,13 @@
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/103')">Робота із профілем MTU (Вік, Аватарка,  + Медіа)</a>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/106')">Айси MTU</a>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/109')">Як працювати з FRU</a>
+            <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
+        </div>
+
+        <div id="topic-10" class="section hidden-section">
+            <h1>📚 Тема 10: Holiday edition: TOP-кейси роботи з функціоналом</h1>
+            <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/114')">Virtual gift та real gifts</a>
+            <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/117')">Ексклюзивні пости + кореспонденція</a>
             <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
         </div>
 
