--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
             <h1>📚 Тема 10: Holiday edition: TOP-кейси роботи з функціоналом</h1>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/114')">Virtual gift та real gifts</a>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/117')">Ексклюзивні пости + кореспонденція</a>
+            <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/119')">Тематичні айсбрейкери</a>
             <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
         </div>
 
