--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             <button class="menu-button" onclick="showSection('topic-8')">📚 Тема 8: Tableau</button>
             <button class="menu-button" onclick="showSection('topic-9')">📚 Тема 9: MTU</button>
             <button class="menu-button" onclick="showSection('topic-10')">📚 Тема 10: Holiday edition: TOP-кейси роботи з функціоналом</button>
+            <button class="menu-button" onclick="showSection('topic-11')">📚 Тема 11: Практичні кейси</button>
         </div>
 
         <!-- Секції -->
@@ -192,6 +193,13 @@
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/114')">Virtual gift та real gifts</a>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/117')">Ексклюзивні пости + кореспонденція</a>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/119')">Тематичні айсбрейкери</a>
+            <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
+        </div>
+        
+        <div id="topic-11" class="section hidden-section">
+            <h1>📚 Тема 11: Практичні кейси</h1>
+            <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/124')">Як персоналізовано та цікаво розпочати діалог</a>
+            <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/127')">New to Old connections</a>
             <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
         </div>
 
