--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
             <h1>📚 Тема 11: Практичні кейси</h1>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/124')">Як персоналізовано та цікаво розпочати діалог</a>
             <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/127')">New to Old connections</a>
+            <a href="#" class="article-link" onclick="openPost(event, 'https://t.me/c/2546267701/130')">Якісне повернення RU</a>
             <button class="back-button" onclick="showSection('main-menu')">⬅️ Назад</button>
         </div>
 
